--- a/teamsesh-music-catalog-app/src/styles/SongsList.css
+++ b/teamsesh-music-catalog-app/src/styles/SongsList.css
@@ -6,6 +6,9 @@
     overflow-y: auto;
     margin: 60px 30px;
     border-radius: 10px;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    /* Ensure no extra scrollbars */
 }
 
 /* Scrollbar styles */
@@ -36,6 +39,10 @@
     font-style: normal;
     font-size: 1rem;
     color: var(--strong-text-color);
+    box-sizing: border-box;
+    overflow: scroll;
+    overflow-y: auto;
+    /* Ensure no extra scrollbars */
 }
 
 .songs-table th,
